# AudioGeneration

./: .gitignore  CMakeLists.txt  main.cpp
_old/wav/: WaveFile.cpp  WaveFile.h
_old/waveform/: _Waveform.cpp  _Waveform.h
audio/: ChordsFrequencies.h  MusicNotesFrequencies.h  Track.cpp  Track.h
audio/wav/: WaveFile.cpp
audio/waveform/: Waveform.cpp  Waveform.h
output/: test.wav.reapeaks
runtime/wav/: WaveFile.cpp  WaveFile.h
runtime/waveform/: Waveform.cpp  Waveform.h
